# Resume_Screening

./: README.md  pyproject.toml  render.yaml
backend/: job_matcher.py  main.py  models.py  resume_extractor.py
frontend/: app.py  utils.py
prompts/: extract_resume.txt  match_job.txt
